<resources>

    <string name="buy">Купить</string>
    <string name="empty_list_title">Список пуст</string>

    <!--menu_navigation-->
    <string name="menu_navigation_menu">Меню</string>
    <string name="menu_navigation_delivery">Доставка</string>
    <string name="menu_navigation_discount">Скидки</string>
    <string name="menu_navigation_about">О нас</string>
    <string name="menu_navigation_basket">Корзина</string>

    <!--toolbar-->
    <string name="toolbar_menu">Меню</string>
    <string name="toolbar_delivery">Доставка</string>
    <string name="toolbar_discount">Скидки</string>
    <string name="toolbar_about">О нас</string>
    <string name="toolbar_basket">Корзина</string>
    <string name="toolbar_payment">Оплата</string>

    <string name="title_progress">Загрузка ...</string>

    <string name="separator">..............................................................</string>

    <!--error paging-->
    <string name="error_connection">Ошибка соединения. Повторите попытку свайпом вниз</string>
    <string name="error_loaded">Ошибка загрузки данных. Повторите попытку свайпом вниз</string>

    <!--dish screen-->
    <string name="dish_add_basket">В корзину</string>
    <string name="dish_quantity_format">Количество: %s</string>
    <string name="dish_price_format">Цена: %s</string>

    <!--basket screen-->
    <string name="basket_label_count">Элементов</string>
    <string name="basket_label_total_price">Сумма</string>
    <string name="basket_title">Корзина</string>
    <string name="empty_basket_title">Корзина пуста</string>
    <string name="basket_item_kind">Тип: </string>
    <string name="basket_item_count">Количество: </string>
    <string name="basket_item_price">Цена: </string>

    <!--payment screen-->
    <string name="payment_name_hint">Имя</string>
    <string name="payment_telephone_hint">Телефон</string>
    <string name="payment_address_hint">Адрес</string>
    <string name="payment_comment_hint">Комментарий</string>
    <string name="btn_payment">Оплатить</string>
    <string name="payment_telephone_start_hint_code">+375 \u0020 (</string>
    <string name="payment_telephone_end_hint_code">)</string>
    <string name="payment_label_total_price">К оплате:</string>

    <!--validation error-->
    <string name="required_field">Это поле обязательное</string>
    <string name="required_code_field">Введите код телефона</string>
    <string name="error_phone_field">Неверный формат телефона</string>
    <string name="error_phone_code_field">Неверный код</string>

    <!--snack bar-->
    <string name="added_items_to_basket">Вы добавили в корзину %d x %s</string>

    <!--error dialog-->
    <string name="title_success">Успешно</string>
    <string name="message_success">Оплата прошла успешно</string>
    <string name="title_error">Ошибка</string>
    <string name="error_message_try_again">Что-то пошло не так. Повторите попытку позже.</string>
    <string name="error_message_with_try_again">Что-то пошло не так. Повторите попытку или зайдите в данный раздел позже.</string>
    <string name="btn_ok">Принять</string>
    <string name="btn_cancel">Отмена</string>
    <string name="btn_retry">Повторить</string>
    <string name="btn_close">Закрыть</string>

</resources>
